# Support-Inbox-Environment

./: .env.example  .gitignore  Dockerfile  HF_SPACE_CHECKLIST.md  README.md  REPO_STRUCTURE.md  SUBMISSION_CHECKLIST.md  app.py  create_submission_zip.sh  env.py  grader.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sync-hf-space.sh  tasks.py  validate-submission.sh  verify_submission.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: validate.yml
graders/: __init__.py  graders.py
server/: __init__.py  app.py  grader.py  graders.py
support_inbox_env/: __init__.py  graders.py
templates/: index.html
tests/: test_api.py  test_env.py  test_graders.py
