[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-inbox-env"
version = "1.0.0"
description = "Support Inbox OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
inference = [
  "openai>=1.30.0",
  "httpx>=0.27.0"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
server = "server.app:main"
